--- a/views/components/title.templ
+++ b/views/components/title.templ
@@ -1,6 +1,11 @@
 package components
 
+css titleClass() {
+    font-size: { "70px" };
+    color: { "#FFFFFF" };
+    font-width: { "bold" };
+}
 
 templ Title(title string) {
-    <h1>{title}</h1>
+    <h1 class={titleClass()}>{title}</h1>
 }
