title and subtitle

--- a/views/components/title.templ
+++ b/views/components/title.templ
@@ -4,6 +4,8 @@ css titleClass() {
     font-size: { "70px" };
     color: { "#FFFFFF" };
     font-width: { "bold" };
+    matgin-bottom: { "12px" };
+    matgin-top: { "0px" };
 }
 
 templ Title(title string) {
