--- a/views/layout/header.templ
+++ b/views/layout/header.templ
@@ -1,15 +1,15 @@
 package layout
 
-import "fmt"
 
-css headerClass(percent int) {
+css headerClass() {
     background: { "#222222" };
+    text-align: {"center"};
     color: {"#FFFFFFFF"};
-    width: { fmt.Sprintf("%d%%", percent) };
+   
 }
 
 templ Header() {
-    <div class={headerClass(50)}>
+    <div class={headerClass()}>
        { children... }
     </div>
 }
