--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 * {
     box-sizing: border-box;
