--- a/views/main.templ
+++ b/views/main.templ
@@ -9,12 +9,32 @@ templ Main() {
 		MetaDescription: "Сайт по поиску работы мечты",
 	}){
 		<main>
+			@MainStyle()
 			@layout.Header(){
 				@components.Title("Найди работу своей мечты!")
 				@components.SubTitle("Простой поиск работы")
 			}
 			Main
+			<div class="main__submit-form">
+				@components.Title2("Опубликовать вакансию")
+				@components.Input(components.InputProps{
+					Placeholder: "Должность",
+					Name: "role",
+				})
+				@components.SubmitButton() {
+					<span>Отправить</span>
+				}
+			</div>
+			
 		</main>
 	}
 	
+}
+
+templ MainStyle() {
+    <style>
+        .main__submit-form{
+            background-color: rgba(48, 150, 137, 0.10);
+        }
+    </style>
 }
