--- a/views/widgets/vacancy-form.templ
+++ b/views/widgets/vacancy-form.templ
@@ -6,8 +6,9 @@ templ VacancyForm() {
     @VacancyFormStyle()
     <div class="vacansy-form">
         @components.Title2("Опубликовать вакансию")
+        <div id="vacancy-result"></div>
         <p class="vacancy-form__text">Введите все необходимые данные для публикации</p>
-        <form>
+        <form hx-post="/vacancy" hx-trigger="submit" hx-target="#vacancy-result" hx-swap="innerHTML">
             <div class="vacansy-form__inputs">
                 @components.Input(components.InputProps{
                     Placeholder: "Должность",
