--- a/views/components/notification.templ
+++ b/views/components/notification.templ
@@ -30,5 +30,9 @@ templ NotificationStyle() {
         .notification_fail {
             background-color: #dc2121;
         }
+        .htmx-swapping .notification{
+            opacity: 0;
+            transition: opacity 0.5s ease-out;
+        }
     </style>
 }
