--- a/views/widgets/vacancy-form.templ
+++ b/views/widgets/vacancy-form.templ
@@ -36,7 +36,8 @@ templ VacancyForm() {
                 })
             </div>
             @components.SubmitButton() {
-                <span>Опубликовать вакансию</span>
+                <div class="vacancy-form__submit">Опубликовать вакансию</div>
+                <div class="vacancy-form__loader"></div>
             }
         </form>
      </div>
@@ -70,6 +71,30 @@ templ VacancyFormStyle() {
             grid-template-columns: 1fr 1fr;
             gap: 30px 24px;
             margin-bottom: 30px;
+        }
+       
+       
+        .htmx-request .vacancy-form__submit{
+            display: none;
+        }
+       
+        .htmx-request .vacancy-form__loader {
+            text-align: center;
+            width: 50px;
+            padding: 8px;
+            aspect-ratio: 1;
+            border-radius: 50%;
+            background: #ffffff;
+            --_m: 
+                conic-gradient(#0000 10%,#000),
+                linear-gradient(#000 0 0) content-box;
+            -webkit-mask: var(--_m);
+                    mask: var(--_m);
+            -webkit-mask-composite: source-out;
+                    mask-composite: subtract;
+            animation: l3 1s infinite linear;
+            }
+            @keyframes l3 {to{transform: rotate(1turn)}
         }
     </style>
 }
