--- a/views/main.templ
+++ b/views/main.templ
@@ -1,5 +1,6 @@
 package views
 
+import "time"
 import "go-fiber/views/components"
 import "go-fiber/views/layout"
 import "go-fiber/views/widgets"
@@ -15,6 +16,15 @@ templ Main() {
 				@components.Title("Найди работу своей мечты!")
 				@components.SubTitle("Простой поиск работы")
 			}
+			@components.VacancyCard(components.VacancyCardProps{
+				Email: "",
+				Location: "Онлайн",
+				Salary: "10000$",
+				CompanyType: "IT",
+				Company: "PurpleCode",
+				Createdat: time.Now(),
+				Role: "Копирайтер",
+			})
 			<div class="main__submit-form">
 				@widgets.VacancyForm()
 			</div>
