--- a/views/widgets/vacancy-list.templ
+++ b/views/widgets/vacancy-list.templ
@@ -2,47 +2,53 @@ package widgets
 
 import "go-fiber/internal/vacancy"
 import "go-fiber/views/components"
+import "fmt"
 
-templ VacancyList(vacancies []vacancy.Vacancy) {
-    @VacancyListStyle()
-        <div class="vacancy-list__wrapper">
-        @components.Title2("Последние вакансии", false)
-        <p>Найди подходящую ваканчию за пару минут!</p>
-            <div class="vacancy-list">
-                for _, vacancy := range vacancies {
-                    @components.VacancyCard(components.VacancyCardProps{
-                        Email: vacancy.Email,
-                        Location: vacancy.Location,
-                        Salary: vacancy.Salary,
-                        CompanyType: vacancy.Type,
-                        Company: vacancy.Company,
-                        Createdat: vacancy.CreatedAt,
-                        Role: vacancy.Role,
-                    })
-                }
-            </div>
-        </div>
-   
+templ VacancyList(vacancies []vacancy.Vacancy, pagesCount, page int) {
+@VacancyListStyle()
+	<div class="vacancy-list__wrapper">
+		@components.Title2("Последние вакансии", false)
+		<p>Найдите подходящую вакансию за пару минут!</p>
+		<div class="vacancy-list">
+			for _, vacancy := range vacancies {
+			@components.VacancyCard(components.VacancyCardProps{
+					Email: vacancy.Email,
+					Location: vacancy.Location,
+					Salary: vacancy.Salary,
+					CompanyType: vacancy.Type,
+					Company: vacancy.Company,
+					Createdat: vacancy.CreatedAt,
+					Role: vacancy.Role,
+				})
+			}
+		</div>
+		<div>
+			if page != 1 {
+				<a href={templ.SafeURL(fmt.Sprintf("/?page=%d", page - 1))}>Предыдущие</a>
+			}
+			if page != pagesCount {
+				<a href={templ.SafeURL(fmt.Sprintf("/?page=%d", page + 1))}>Следующие</a>
+			}
+		</div>
+	</div>
 }
 
 templ VacancyListStyle() {
-    <style>
-        .vacancy-list__wrapper {
-            width: 100%;
-            max-width: 1296px;
-             margin: 0 auto;
-             padding: 60px 0;
-        }
-        .vacancy-list__wrapper p {
-            margin-bottom: 60px;
-        }
-        .vacancy-list {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            gap: 24px;
-          
-           
-        } 
-    </style>
+<style>
+	.vacancy-list__wrapper {
+		width: 100%;
+		max-width: 1296px;
+		margin: 0 auto;
+		padding: 60px 0;
+	}
+	.vacancy-list__wrapper p {
+		margin-bottom: 60px;
+	}
+	.vacancy-list {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		gap: 24px;
+	}
+</style>
 }
