--- a/views/main.templ
+++ b/views/main.templ
@@ -5,36 +5,33 @@ import "go-fiber/views/layout"
 import "go-fiber/views/widgets"
 import "go-fiber/internal/vacancy"
 
-templ Main(vacancies []vacancy.Vacancy) {
+templ Main(vacancies []vacancy.Vacancy, pagesCount, page int) {
 	@layout.Layout(layout.LayoutProps{
 		Title: "Найди работу мечты",
 		MetaDescription: "Сайт по поиску работы мечты",
-	}){
+	}) {
 		<main>
 			@MainStyle()
-			@layout.Header(){
-				@components.Title("Найди работу своей мечты!")
-				@components.SubTitle("Простой поиск работы")
+			@layout.Header() {
+			@components.Title("Найди работу своей мечты!")
+			@components.SubTitle("Простой поиск работы")
 			}
-			@widgets.VacancyList(vacancies)
-			
+			@widgets.VacancyList(vacancies, pagesCount, page)
 			<div class="main__submit-form">
-				@widgets.VacancyForm() 
+				@widgets.VacancyForm()
 			</div>
-			
 		</main>
 	}
-	
 }
 
 templ MainStyle() {
-    <style>
-        .main__submit-form{
-			display: flex;
-			align-items: center;
-			justify-content: center;
-            background-color: rgba(48, 150, 137, 0.10);
-			padding: 60px 0 120px 0;
-        }
-    </style>
+<style>
+	.main__submit-form {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: rgba(48, 150, 137, 0.10);
+		padding: 60px 0 120px 0;
+	}
+</style>
 }
