--- a/views/layout/header.templ
+++ b/views/layout/header.templ
@@ -1,22 +1,22 @@
 package layout
 
 templ Header() {
-    @HeaderStyle()
-    <div class="header">
-        @Menu()
-       { children... }
-    </div>
+	@HeaderStyle()
+	<div class="header">
+		@Menu()
+		{ children... }
+	</div>
 }
 
 templ HeaderStyle() {
-    <style>
-        .header{
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-            background: #222222;
-
-        }
-    </style>
+	<style>
+		.header {
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+			background: #222222;
+			padding-bottom: 30px;
+		}
+	</style>
 }
