--- a/views/widgets/login-form.templ
+++ b/views/widgets/login-form.templ
@@ -4,23 +4,35 @@ import "go-fiber/views/components"
 
 templ LoginForm() {
     @LoginFormStyle()
-    <form hx-post="/" hx-trigger="submit" class="login-form">
-        @components.Input(components.InputProps{
-			Name: "email",
-			Placeholder: "Email",
-		})
-        @components.Input(components.InputProps{
-			Name: "password",
-			Placeholder: "Пароль",
-		})
-        @components.SubmitButton() {
-			<div>Опубликовать</div>
-		}
-    </form>
+        <div id="login-result"></div>
+        <form 
+            hx-ext="response-targets"
+            hx-post="/api/login"
+            hx-trigger="submit"
+            class="login-form"
+            hx-target-error="#login-result"
+            hx-swap="innerHTML"
+        >
+            @components.Input(components.InputProps{
+                Name: "email",
+                Placeholder: "Email",
+            })
+            @components.Input(components.InputProps{
+                Name: "password",
+                Placeholder: "Пароль",
+                Type: "password",
+            })
+            @components.SubmitButton() {
+                <div>Опубликовать</div>
+            }
+        </form>
 }
 
 templ LoginFormStyle() {
     <style>
+    #login-result {
+        margin-bottom: 10px;
+    }
         .login-form {
             display: flex;
             flex-direction: column;
